--- a/chess-game.html
+++ b/chess-game.html
@@ -6,9 +6,9 @@
     <title>Chess Game</title>
     <!-- Add the chessboard.js CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/chessboard-js/1.0.0/chessboard-1.0.0.css">
-    <!-- Add the chess.js library (this should come first) -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/chess.js/0.13.4/chess.min.js"></script>
-    <!-- Add the chessboard.js library (this should come after chess.js) -->
+    <!-- Add the chess.js library with type="module" -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/chess.js/0.13.4/chess.min.js" type="module"></script>
+    <!-- Add the chessboard.js library (without type="module") -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/chessboard-js/1.0.0/chessboard-1.0.0.js"></script>
     <style>
         /* Your existing styles... */
